2016-10-04  Oliver Lemke  <olemke@core-dump.info>

	* doc/oem.rst:

	Remove sentence about oem docs not working. Remove duplicate
	description text.

2016-10-04  Gerrit Holl  <g.holl@reading.ac.uk>

	* typhon/datasets/_tovs_defs.py:

	Fix syntaxerror in previous commit.

2016-10-03  Gerrit Holl  <g.holl@reading.ac.uk>

	* typhon/datasets/_tovs_defs.py:

	- Add defiitions for NOAA11, NOAA10, NOAA9.  We don't have definitions
	for older NOAA, so use NOAA9.  Use with caution.

2016-10-03  Gerrit Holl  <g.holl@reading.ac.uk>

	* typhon/datasets/tovs.py:

	- Rearrange some code between superclasses

	* typhon/datasets/_tovs_defs.py:

	- Add definitions for noaa14, noaa12, work in progress

2016-09-30  Gerrit Holl  <g.holl@reading.ac.uk>

	* typhon/typhon/datasets (HIRS):

	- Add re to HIRS definition.  Include cases where it starts with
	a prefix of (L\d*) for some reason.

2016-09-30  Lukas Kluft  <lukas.kluft@gmail.com>

	* typhon/arts/__init__.py (run_arts):

	By default an exception is raised if the ARTS run failed. This behaviour
	can the disabled with the ignore_error keyword.

2016-09-28  Gerrit Holl  <g.holl@reading.ac.uk>

	* typhon/datasets/tovs.py:
	
	(HIRS.calc_time_since_last_calib):

	- Fix bug introduced when reducing memory usage, now returns correct
	tsc in seconds (float) again, I hope.

	(HIRSHIRS._read)

	- Add time field, needs more checking though.

	* typhon/datasets/dataset.py:
	
	(Dataset.read_period):

	- Fix bug that was destroying flags by turning a masked array into a
	regular array.

	- Don't report success when no data were available.

	(NetCDFDataset._read):

	- Use masked arrays and respect fillvalues accordingly, if available.
	
2016-09-28  Gerrit Holl  <g.holl@reading.ac.uk>:

	* typhon/plots/__init__.py(plot_distribution_as_percentiles):

	- Bugfix: should omit label for repeated pattern for higher
	percentiles if no locallib is passed.

	* typhon/dataset/dataset.py:
	
	(Dataset.read_period):
